client/src/styles/AboutMe.module.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

.intro {
    padding-top: 125px;
    background-image: url("../images/introBackground.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.header {
    font-weight: bold;
    font-size: 50px;
}

.introLang {
    margin-bottom: 50px;
    font-size: 35px;
    font-weight: 300;
}

.pic {
    width: 280px;
    border-radius: 50%;
    margin: 10px auto 150px;
}

.block {
    margin-bottom: 100px;
    width:auto;
    height: auto;
    min-height: 100px;
    padding: 100px 0;
    text-align: center;
    background-color: rgb(52,170,210);
}

.selfIntro1 {
    color: white;
    padding: 0 10px;
    margin: 0 auto 10px;
    font-weight: bold;
    font-size: 50px;
}

.selfIntro2 {
    color: white;
    margin: 0 auto 30px;
    padding: 0 10px;
    max-width: fit-content;
    /* font-weight: bold; */
}

.selfIntro3 {
    color: white;
    margin: 0 auto;
    padding: 0 10px;
    max-width: 700px;
    font-size: 18px;
    font-family: 'Poppins', sans-serif;
}

